Concatenate .page and .{page-name}sections. Move .{page-name} class to section.page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</div>
 		</div> <!-- Page width -->
 	</header> <!-- Site head -->
-	<section class="page">
+	<section class="page letters">
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
