--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
 			</div>
 		</div> <!-- Page width -->
 	</header> <!-- Site head -->
-	<section class="page">
+	<section class="page portfolio">
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
@@ -95,54 +95,52 @@
 				</header> <!-- Page header -->
 			</div>
 		</div> <!-- Page width -->
-		<section class="portfolio">
-			<div class="page-width">
-				<ul class="portfolio-list cfix">
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-					<li class="portfolio-item medium-6 large-4">
-						<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-						<div class="portfolio-item-meta txt-center">
-							<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
-							<p class="portfolio-item-desc">web. graphics. print.</p>
-						</div>
-					</li>
-				</ul> <!-- Portfolio list -->
-			</div> <!-- Page width -->
-		</section> <!-- Archive -->
+		<div class="page-width">
+			<ul class="portfolio-list cfix">
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+				<li class="portfolio-item medium-6 large-4">
+					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
+					<div class="portfolio-item-meta txt-center">
+						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
+						<p class="portfolio-item-desc">web. graphics. print.</p>
+					</div>
+				</li>
+			</ul> <!-- Portfolio list -->
+		</div> <!-- Page width -->
 	</section> <!-- Page -->
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
