Remove text aligning classes from HTML files

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,42 +99,42 @@
 			<ul class="portfolio-list cfix">
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
 				</li>
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
 				</li>
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
 				</li>
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
 				</li>
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
 				</li>
 				<li class="portfolio-item medium-6 large-4">
 					<a href="#"><img alt="" src="img/portfolio/portfolio.gif"></a>
-					<div class="portfolio-item-meta txt-center">
+					<div class="portfolio-item-meta">
 						<h2 class="portfolio-item-title"><a href="#">Atlas identitāte</a></h2>
 						<p class="portfolio-item-desc">web. graphics. print.</p>
 					</div>
