Add {{ site.baseurl }} to img/a tags

--- a/vestules/_posts/2014-04-21-this-is-your-brain-on-mobile-television.html
+++ b/vestules/_posts/2014-04-21-this-is-your-brain-on-mobile-television.html
@@ -37,8 +37,8 @@ feature-image: post.png
 		<div class="page-width">
 			<div class="medium-10 large-8 medium-centered">
 				<figure>
-					<a href="/img/posts/figure.jpg">
-						<img src="/img/posts/figure.jpg" alt="">
+					<a href="{{ site.baseurl }}/img/posts/figure.jpg">
+						<img src="{{ site.baseurl }}/img/posts/figure.jpg" alt="">
 					</a>
 					<figcaption>Paskaidrojus zem bildes</figcaption>
 				</figure>
@@ -62,19 +62,19 @@ feature-image: post.png
 		<div class="page-width">
 			<div class="medium-6 large-4">
 				<figure>
-					<img src="/img/posts/img3-1.jpg" alt="">
+					<img src="{{ site.baseurl }}/img/posts/img3-1.jpg" alt="">
 					<figcaption>Paskaidrojus zem bildes</figcaption>
 				</figure>
 			</div>
 			<div class="medium-6 large-4">
 				<figure>
-					<img src="/img/posts/img3-2.jpg" alt="">
+					<img src="{{ site.baseurl }}/img/posts/img3-2.jpg" alt="">
 					<figcaption>Paskaidrojus zem bildes</figcaption>
 				</figure>
 			</div>
 			<div class="medium-12 large-4">
 				<figure>
-					<img src="/img/posts/img3-3.jpg" alt="">
+					<img src="{{ site.baseurl }}/img/posts/img3-3.jpg" alt="">
 					<figcaption>Paskaidrojus zem bildes</figcaption>
 				</figure>
 			</div>
