--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ title: Ooops!
 			<div class="medium-10 large-8">
 				<header class="page-header">
 					<h1 class="page-title">{{ page.title }}</h1>
-					<p class="page-desc"><h2 class="page-desc-heading">Lapa nav atrasta</h2>Diemžēl Tava meklētā lapa nav atrasta. Iespējams tā nekad nav pastāvējusi, ir tikusi pārvietota vai izdzēsta. Tas nekas, šeit Tu vari apskatīt manu <a href="/portfolio/">portfolio</a>, izlasīt īsu <a href="/bio/">stāstu</a> par mani vai arī pārbaudīt, vai nav publicēta kāda jauna <a href="/">vēstule</a>. Ja esi apjucis, vari nosūtīt man e-pastu: m.mihailovs@gmail.com</p>
+					<p class="page-desc"><h2 class="page-desc-heading">Lapa nav atrasta</h2>Diemžēl Tava meklētā lapa nav atrasta. Iespējams tā nekad nav pastāvējusi, ir tikusi pārvietota vai izdzēsta. Tas nekas, šeit Tu vari apskatīt manu <a href="{{ site.baseurl }}/portfolio/">portfolio</a>, izlasīt īsu <a href="{{ site.baseurl }}/bio/">stāstu</a> par mani vai arī pārbaudīt, vai nav publicēta kāda jauna <a href="{{ site.baseurl }}">vēstule</a>. Ja esi apjucis, vari nosūtīt man e-pastu: m.mihailovs@gmail.com</p>
 				</header> <!-- Page header -->
 			</div>
 		</div> <!-- Page width -->
