--- a/anketa/index.html
+++ b/anketa/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<!--Add the title of your typeform below-->
-	<title>Projekta aptauja</title>
+	<title>Projekta anketa | Mārtiņš Mihailovs</title>
 	
 	<!--CSS styles that ensure your typeform takes up all the available screen space (DO NOT EDIT!)-->
 <style type="text/css">
