Add bg image to pages

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: page
 title: Ooops!
 ---
-	<section class="page page-404">
+	<section class="page-content page-404">
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
