--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@ layout: page
 title: Portfolio
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, fugit, provident, sit perspiciatis sequi voluptate placeat repellendus ab inventore illum ea aperiam quidem qui! Vel, dolorem eius quaerat labore repudiandae error expedita dolore sed eum illum similique aperiam molestias velit.
 ---
-	<section class="page portfolio">
+	<section class="page-content portfolio">
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
