Update post title

--- a/vestules/_posts/09-02-2015-gausanas-nav-problema.html
+++ b/vestules/_posts/09-02-2015-gausanas-nav-problema.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Gaušanās nav problēma, bet gan tas, kā to darām
+title: Gaušanās nav problēma. Problēma ir tajā, kā to darām
 description: Visiem patīk gausties, un visi to dara. Tas ir normāli. Tādējādi mēs izsakām savu neapmierinātību un nepatiku pret procesiem vai lietām, jo vēlamies, lai būtu savādāk, lai būtu labāk. Tā tik turpini, tikai mazliet izmaini pieeju šim procesam.
 cover: february-2015/negausties-darit.jpg
 ---
