Create 2 site footers:narrow and wide

--- a/foto.html
+++ b/foto.html
@@ -58,3 +58,4 @@ description: Dizains un Fotogrāfijas
 			</ul> <!-- Foto list -->
 		</div> <!-- Page width -->
 	</section> <!-- Page -->
+	{% include site-footer-wide.html %}
