Add message that 'this section soon will be filled with content'

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -2,13 +2,13 @@
 permalink: /portfolio/
 layout: page
 title: Portfolio
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, fugit, provident, sit perspiciatis sequi voluptate placeat repellendus ab inventore illum ea aperiam quidem qui! Vel, dolorem eius quaerat labore repudiandae error expedita dolore sed eum illum similique aperiam molestias velit.
+description: Dizaina un web izstrādes portfolio
 ---
 	<section class="page-content portfolio">
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
-					<p class="page-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, fugit, provident, sit perspiciatis sequi voluptate placeat repellendus ab inventore illum ea aperiam quidem qui! Vel, dolorem eius quaerat labore repudiandae error expedita dolore sed eum illum similique aperiam molestias velit.</p>
+					<p class="page-desc">Strādāju pie satura. Drīz. Būs. Gatavs.</p>
 				</header> <!-- Page header -->
 			</div>
 		</div> <!-- Page width -->
