--- a/_pages/foto.html
+++ b/_pages/foto.html
@@ -11,49 +11,49 @@ description: Dizains un Fotogrāfijas
 					<a href="/img/foto/neris.jpg"><img alt="Melns suns" src="/img/foto/thumbs/neris.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/juris.jpg"><img alt="Vīrietis ar cepuri" src="/img/foto/thumbs/juris.jpg"></a>
+					<a href="/img/foto/juris.jpg"><img alt="Vīrietis ar cepuri" src="/img/foto/juris.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6 pull-right">
-					<a href="/img/foto/edzus.jpg"><img alt="Puika spēļu laukumā" src="/img/foto/thumbs/edzus.jpg"></a>
+					<a href="/img/foto/edzus.jpg"><img alt="Puika spēļu laukumā" src="/img/foto/edzus.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/govs.jpg"><img alt="Govs aplokā" src="/img/foto/thumbs/govs.jpg"></a>
+					<a href="/img/foto/govs.jpg"><img alt="Govs aplokā" src="/img/foto/govs.jpg"></a>
 				</li>
 				<li class="foto-item small-12">
-					<a href="/img/foto/ilga.jpg"><img alt="Vecmamma" src="/img/foto/thumbs/ilga.jpg"></a>
+					<a href="/img/foto/ilga.jpg"><img alt="Vecmamma" src="/img/foto/ilga.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/marta.jpg"><img alt="Meitene laukos" src="/img/foto/thumbs/marta.jpg"></a>
+					<a href="/img/foto/marta.jpg"><img alt="Meitene laukos" src="/img/foto/marta.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/sasha.jpg"><img alt="Pludmales volejbols meitene" src="/img/foto/thumbs/sasha.jpg"></a>
+					<a href="/img/foto/sasha.jpg"><img alt="Pludmales volejbols meitene" src="/img/foto/sasha.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/pile.jpg"><img alt="Pīle" src="/img/foto/thumbs/pile.jpg"></a>
+					<a href="/img/foto/pile.jpg"><img alt="Pīle" src="/img/foto/pile.jpg"></a>
 				</li>
 				<li class="foto-item small-12">
-					<a href="/img/foto/pjotr.jpg"><img alt="Vīrietis saulesbrillēs" src="/img/foto/thumbs/pjotr.jpg"></a>
+					<a href="/img/foto/pjotr.jpg"><img alt="Vīrietis saulesbrillēs" src="/img/foto/pjotr.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/party.jpg"><img alt="Ballīte" src="/img/foto/thumbs/party.jpg"></a>
+					<a href="/img/foto/party.jpg"><img alt="Ballīte" src="/img/foto/party.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6 pull-right">
-					<a href="/img/foto/televizijas-tornis.jpg"><img alt="Televīzijas tornis" src="/img/foto/thumbs/televizijas-tornis.jpg"></a>
+					<a href="/img/foto/televizijas-tornis.jpg"><img alt="Televīzijas tornis" src="/img/foto/televizijas-tornis.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/jaunskinki.jpg"><img alt="Lauku sēta" src="/img/foto/thumbs/jaunskinki.jpg"></a>
+					<a href="/img/foto/jaunskinki.jpg"><img alt="Lauku sēta" src="/img/foto/jaunskinki.jpg"></a>
 				</li>
 				<li class="foto-item small-12">
-					<a href="/img/foto/volejbols.jpg"><img alt="Pludmales volejbols" src="/img/foto/thumbs/volejbols.jpg"></a>
+					<a href="/img/foto/volejbols.jpg"><img alt="Pludmales volejbols" src="/img/foto/volejbols.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/bentley.jpg"><img alt="Bentlijs noliktavā" src="/img/foto/thumbs/bentley.jpg"></a>
+					<a href="/img/foto/bentley.jpg"><img alt="Bentlijs noliktavā" src="/img/foto/bentley.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/marta-2.jpg"><img alt="Meitene spēļu laukumā" src="/img/foto/thumbs/marta-2.jpg"></a>
+					<a href="/img/foto/marta-2.jpg"><img alt="Meitene spēļu laukumā" src="/img/foto/marta-2.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
-					<a href="/img/foto/skirotava.jpg"><img alt="Šķirotava" src="/img/foto/thumbs/skirotava.jpg"></a>
+					<a href="/img/foto/skirotava.jpg"><img alt="Šķirotava" src="/img/foto/skirotava.jpg"></a>
 				</li>
 			</ul> <!-- Foto list -->
 		</div> <!-- Page width -->
