Update Foto images, add single portfilio styles, add atlas case study

--- a/_pages/foto.html
+++ b/_pages/foto.html
@@ -8,7 +8,7 @@ description: Dizains un Fotogrāfijas
 		<div class="page-width">
 			<ul class="foto-list cfix">
 				<li class="foto-item small-12">
-					<a href="/img/foto/neris.jpg"><img alt="Melns suns" src="/img/foto/thumbs/neris.jpg"></a>
+					<a href="/img/foto/neris.jpg"><img alt="Melns suns" src="/img/foto/neris.jpg"></a>
 				</li>
 				<li class="foto-item small-12 medium-6">
 					<a href="/img/foto/juris.jpg"><img alt="Vīrietis ar cepuri" src="/img/foto/juris.jpg"></a>
