--- a/vestules/_posts/05-08-2015-gribi-sasmidinat-dievu-izstasti-vinam-savus-planus.html
+++ b/vestules/_posts/05-08-2015-gribi-sasmidinat-dievu-izstasti-vinam-savus-planus.html
@@ -38,7 +38,7 @@ If nothing else, today I am going to ___________.
 I am going to do this by ______ then _____ then ______.
 If I do this and only this, today will be a good day.
 				{% endhighlight %}
-				<ul>
+				<ul class="text-list">
 					<li>Pirmais teikums definē <strong>vienu</strong> svarīgāko mērķi šodienai</li>
 					<li>Otrais teikums sadala šo mērķi uzdevumos</li>
 					<li>Trešais teikums atgādina par ieguvumiem, ja mērķis tiks sasniegts</li>
