--- a/vestules/_posts/31-10-2015-20-atzinas-pec-5-nostradatiem-gadiem.html
+++ b/vestules/_posts/31-10-2015-20-atzinas-pec-5-nostradatiem-gadiem.html
@@ -34,7 +34,7 @@ cover: october-2015/logistics-center-atlas-flag.jpg
 				<p>Spēja pārliecināt citus par izvēlētajiem dizaina risinājumiem ir <em>must have</em> īpašība ikvienam dizainerim. Dizains pats sevi nespēj pārdot (lai gan tāds pieņēmums pastāv). Pieņemtie dizaina lēmumi ir jāpamato. Parādi, ka Tu zini savu arodu un ka Tevis nolīgšana ir bijis pareizais lēmums.</p>
 				<p>Nekad, ja tas ir iespējams, nedod savus darbus prezentēt citiem. Ja prezentācija būs neveiksmīga, vainīgs būs Tevis izveidotais dizains un pašam nāksies strādāt pie jauna. Tikai Tu zini visas sīkākās projekta detaļas, un tieši Tu vislabāk vari par tām pastāstīt. <a href="http://muledesign.com/">&ldquo;Mule&rdquo; dizaina studijas</a> vadītājs <a href="https://twitter.com/monteiro">Maiks Monteiro</a> (Mike Monteiro) savā grāmatā &ldquo;<a href="http://abookapart.com/products/design-is-a-job">Design is a job</a>&rdquo; uzsver:</p>
 				<blockquote>
-					<p>Dizainers, kurš pats neprezentē savus darbus,<br>nav dizainers.</p><cite>- Maiks Monteiro</cite>
+					<p>Dizainers, kurš pats neprezentē savus darbus, nav dizainers.</p><cite>- Maiks Monteiro</cite>
 				</blockquote>
 				<p>Papildus izaicinājums ir strādāt ar klientiem, kuri nav no radošajām industrijām, piemēram, advokātu firmu vadītāji, zobārsti, banku darbinieki, profesori utt. Šie nav Tavi kolēģi dizaineri, ar kuriem saproties no pus vārda, un kuriem <a href="https://en.wikipedia.org/wiki/White_space_%28visual_arts%29">negatīvās telpas</a> trūkums Tavos dizainos būs lielākā problēma.</p>
 				<h3 class="h2">Radošumam nav limita. Vienmēr būs vēl</h3>
@@ -50,7 +50,7 @@ cover: october-2015/logistics-center-atlas-flag.jpg
 				<h3 class="h2">Reklāmas kampaņa bez tās rezultātu atsekošanas ir neveiksmīga kampaņa. Vienmēr ir jāatrod veids, kā izanalizēt reklāmas efektivitāti</h3>
 				<p>Reklāmas kampaņas rezultātu izsekošana vienmēr ir bijis izaicinājums. Izaicinājums, kas nereti tiek ignorēts. Tiek ignorēts, jo tā ir vieglāk, jo reklāmas kampaņa jau ir pagājusi un laiks strādāt pie jaunas.</p>
 				<p>Tieši iepriekšējo kampaņu secinājumi vislabāk palīdz veidot jaunas kampaņas. Ja ir tikusi veikta analīze, ir zināms, vai šis konkrētais reklāmas kanāls strādā, cik zvanu/epastu tika saņemts, kāda auditorija tika sasniegta, no kuriem reģioniem utt. Interneta kampaņām rezultātus atsekot ir salīdzinoši vienkārši&mdash;reklāmas banerim, rakstam, attēlam ir sava saite, kuras klikšķi tiek saskaitīti, pavadītais laiks mājaslapā uzskaitīts. Ja tā ir drukāta reklāma&mdash;žurnāli, bukleti, vizītkartes, cenu lapas&mdash;tad uzdevums ir mazliet sarežģītāks. Šādos gadījumos var:</p>
-				<ul>
+				<ul class="text-list">
 					<li>reklāmās norādīt īpaši kampaņai izveidotus telefona numurus un/vai epastus. Ja zvans tiek saņemts uz šo numuru, tad nav nekādu šaubu, no kurienes klients par mums uzzinājis;</li>
 					<li>jauniem klientiem palūgt aizpildīt anketu, kurā ir jautājums par to, kā viņi par mums uzzināja. Ja klients ir atvērts, viņam nebūs iebildumu to izdarīt.</li>
 				</ul>
