--- a/vestules/_posts/29-08-2014-tavs-jaunais-vestulu-draugs.html
+++ b/vestules/_posts/29-08-2014-tavs-jaunais-vestulu-draugs.html
@@ -8,7 +8,7 @@ description: Būvēsim to internetu kopā; būvēsim to labāku.
 			<div class="medium-11 large-8 medium-centered">
 				<p>Esi sveicināts, draugs, mani sauc Mārtiņš un šīs ir manas vēstules. Vēstules Tev. Citi tos sauktu par bloga ierakstiem, bet es tās saucu par vēstulēm. Mīlestības, sajūsmas, ilgu un cerību&mdash;tās visas Tu saņemsi. Personīgais blogs ar ievirzi pieredzes dalīšanā. Tā trīs vārdos varētu raksturot to, par ko būs šīs vēstules. Tajās dokumentēšu savas pūles būvējot internetu un apgūstot jaunas tehnoloģijas.
 				<h3>Galvenās tēmas varētu<a href="#footnote-1"><sup>*</sup></a> būt šādas:</h3>
-				<ul class="list-small">
+				<ul class="text-list list-small">
 					<li>Dizains (grafiskais, industriālais)</li>
 					<li>Kods (funkcijas un metodes, kas liek griezties gan internetam, gan Tavai veļasmašīnai)</li>
 					<li>Fotogrāfija (process, kompozīcija, pēcapstrāde)</li>
