Add new desc text to portfolio page

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,7 @@ description: Dizaina un web izstrādes portfolio
 		<div class="page-width">
 			<div class="medium-10 large-8">
 				<header class="page-header">
-					<p class="page-desc">Strādāju pie satura. Drīz. Būs. Gatavs.</p>
+					<p class="page-desc">Šis ir mans portfolio&mdash;digitālie un drukas dizaina darbi. Mana maize, mans virtuālais spogulis. Ja Tev patīk tas, ko Tu redzi vai arī vēlies strādāt kopā, dod man zināt: <a href="mailto:m.mihailovs@gmail.com?Subject=Mārtiņ,%20man%20patīk%20tas,%20ko%20redzu">{{ site.owner.email }}</a></p>
 				</header> <!-- Page header -->
 			</div>
 		</div> <!-- Page width -->
