Add Borgcamp case study

--- a/portfolio/_posts/25-02-2016-atlas-logistics.html
+++ b/portfolio/_posts/25-02-2016-atlas-logistics.html
@@ -15,7 +15,7 @@ site-head: dark
 						<ul class="list-unstyled">
 							<li><span>Gads: </span>2010&mdash;2015</li>
 							<li><span>Klients: </span><a href="http://www.warehouse.lv/">Atlas logistics</a></li>
-							<li><span>Mana loma: </span>Vizuālā identitāte, korporatīvais dizains </li>
+							<li><span>Mana loma: </span>Vizuālā identitāte, korporatīvais dizains</li>
 						</ul>
 					</aside>
 					<p class="hanging-punctuation">&ldquo;Loģistikas nozare nekad nav izcēlusies dizaina ziņā. Tai trūkst gaumes. Trūkst drosmes. Trūkst inovāciju. Mums tas ir jāmaina un, lai to paveiktu, nav nepieciešams nekas grandiozs. <strong>Tikai pāris labu cilvēku un aizrautīgs darbs</strong>,&rdquo; viņš teica. Spēcīgs uzņēmuma zīmols bija viņa prioritāšu sarakstā. Es ar abām rokām biju par. Gatavs darbam, gatavs dizaina maratonam 5 gadu garumā.</p>
@@ -127,7 +127,7 @@ site-head: dark
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Happy Holidays</h2>
-					<p>Ziemassvētki ir brīnumu laiks. Un laiks, kad dizaneri peli nomaina pret šķērēm un karsto līmi. Man tās ir gaidītas pārmaiņas, kad ir iespēja sajust dažādās papīra tekstūras, kombinēt tos un ar roku ieraksīt savu vēlējumu kādam, kas aizvadītajā gadā ir palīdzējis. Man tika dota pārsteidzoša brīvība un resursi, lai izpaustos, un es ar lielu azartu to arī darīju. Zemāk ir pēdējo 3 gadu apsveikuma kartiņas, kuras tika sūtītas uzņēmuma klientiem, draugiem un partneriem visā pasaulē.</p>
+					<p>Ziemassvētki ir sasodīto brīnumu laiks. Un laiks, kad dizaneri peli nomaina pret šķērēm un karsto līmi. Man tās ir gaidītas pārmaiņas, kad ir iespēja sajust dažādās papīra tekstūras, kombinēt tos un ar roku ieraksīt savu vēlējumu kādam, kas aizvadītajā gadā ir palīdzējis. Man tika dota pārsteidzoša brīvība un resursi, lai izpaustos, un es ar lielu azartu to arī darīju. Zemāk ir pēdējo 3 gadu apsveikuma kartiņas, kuras tika sūtītas uzņēmuma klientiem, draugiem un partneriem visā pasaulē.</p>
 				</div>
 			</div>
 			<div class="page-width foto">
