Add alt attributes to img in Borgcamp case study

--- a/portfolio/_posts/23-02-2015-borgcamp.html
+++ b/portfolio/_posts/23-02-2015-borgcamp.html
@@ -33,28 +33,28 @@ site-head: light
 				<figure>
 					<ul class="foto-list cfix">
 						<li class="foto-item small-4 medium-3">
-							<img alt="Atvilktne ikona" src="/img/portfolio/borgcamp/vw-logo.gif">
+							<img alt="Volkswagen logo" src="/img/portfolio/borgcamp/vw-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Karte ikona" src="/img/portfolio/borgcamp/ferrari-logo.gif">
+							<img alt="Ferrari logo" src="/img/portfolio/borgcamp/ferrari-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Sertifikāts ikona" src="/img/portfolio/borgcamp/mercedes-logo.gif">
+							<img alt="Mercedes-Benz logo" src="/img/portfolio/borgcamp/mercedes-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Kredīts ikona" src="/img/portfolio/borgcamp/mini-logo.gif">
+							<img alt="Mini logo" src="/img/portfolio/borgcamp/mini-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Licence ikona" src="/img/portfolio/borgcamp/toyota-logo.gif">
+							<img alt="Toyota logo" src="/img/portfolio/borgcamp/toyota-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Noliktava 3d ikona" src="/img/portfolio/borgcamp/mitsubishi-logo.gif">
+							<img alt="Mitsubishi logo" src="/img/portfolio/borgcamp/mitsubishi-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Latvijas robeža ikona" src="/img/portfolio/borgcamp/bmw-logo.gif">
+							<img alt="BMW logo" src="/img/portfolio/borgcamp/bmw-logo.gif">
 						</li>
 						<li class="foto-item small-4 medium-3">
-							<img alt="Konteiners ikona" src="/img/portfolio/borgcamp/land-rower-logo.gif">
+							<img alt="Land Rower logo" src="/img/portfolio/borgcamp/land-rower-logo.gif">
 						</li>
 					</ul>
 					<figcaption>Vēlamā zīmola asociācija</figcaption>
@@ -68,7 +68,7 @@ site-head: light
 				</div>
 				<div class="small-12">
 					<figure>
-						<a href="/img/portfolio/borgcamp/borgcamp-logo-sketches.jpg"><img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-logo-sketches.jpg"></a>
+						<a href="/img/portfolio/borgcamp/borgcamp-logo-sketches.jpg"><img alt="Borgcamp logo skices" src="/img/portfolio/borgcamp/borgcamp-logo-sketches.jpg"></a>
 						<figcaption>Meklējot īsto gotisko &ldquo;B&rdquo;</figcaption>
 					</figure>
 				</div>
@@ -79,10 +79,10 @@ site-head: light
 				<h2 class="h3">Rezultāts</h2>
 				<div class="section-borgcamp-result-content cfix">
 					<div class="medium-6 centered section-borgcamp-result-content-left">
-						<img src="/img/portfolio/borgcamp/borgcamp-logo-lg.png" alt="">
+						<img src="/img/portfolio/borgcamp/borgcamp-logo-lg.png" alt="Borgcamp logo">
 					</div>
 					<div class="medium-6 centered section-borgcamp-result-content-right">
-						<img src="/img/portfolio/borgcamp/borgcamp-group-logos.png" alt="">
+						<img src="/img/portfolio/borgcamp/borgcamp-group-logos.png" alt="Borgcamp Group logos">
 					</div>
 				</div>
 			</div>
@@ -91,13 +91,13 @@ site-head: light
 			<div class="page-width">
 				<div class="small-12">
 					<figure class="figure-starts-section">
-						<a href="/img/portfolio/borgcamp/borgcamp-sign.jpg"><img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-sign.jpg"></a>
+						<a href="/img/portfolio/borgcamp/borgcamp-sign.jpg"><img alt="Borgcamp izkārtne" src="/img/portfolio/borgcamp/borgcamp-sign.jpg"></a>
 					</figure>
 					<figure>
-						<a href="/img/portfolio/borgcamp/borgcamp-shirts.jpg"><img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-shirts.jpg"></a>
+						<a href="/img/portfolio/borgcamp/borgcamp-shirts.jpg"><img alt="Borgcamp kreklu dizains" src="/img/portfolio/borgcamp/borgcamp-shirts.jpg"></a>
 					</figure>
 					<figure>
-						<a href="/img/portfolio/borgcamp/borgcamp-cards.jpg"><img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-cards.jpg"></a>
+						<a href="/img/portfolio/borgcamp/borgcamp-cards.jpg"><img alt="Borgcamp vizītkartes dizains" src="/img/portfolio/borgcamp/borgcamp-cards.jpg"></a>
 						<figcaption><strong>Papīrs</strong>: Plike Deep Blue 330g/m<sup>2</sup><br/><strong>Krāsas</strong>: Pantone 1585C, Pantone Cool Gray 1C</figcaption>
 					</figure>
 				</div>
@@ -111,19 +111,19 @@ site-head: light
 				</div>
 				<div class="small-12">
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-home.jpg" class="figure-bordered figure-padded">
+						<img alt="Galvenās lapas dizains" src="/img/portfolio/borgcamp/borgcamp-home.jpg" class="figure-bordered figure-padded">
 						<figcaption><a href="http://borgcamp.com/">Galvenā lapa</a></figcaption>
 					</figure>
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Mājaslapas dizains" src="/img/portfolio/borgcamp/borgcamp-construction.jpg" class="figure-bordered figure-padded">
+						<img alt="Celtniecības materiālu lapa" src="/img/portfolio/borgcamp/borgcamp-construction.jpg" class="figure-bordered figure-padded">
 						<figcaption><a href="http://borgcamp.com/borgcamp-trading/construction-materials/">Celtniecības materiālu tirdzniecība</a></figcaption>
 					</figure>
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Noliktava + Finanses" src="/img/portfolio/borgcamp/borgcamp-textile.jpg" class="figure-bordered figure-padded">
+						<img alt="Tekstila izstrādājumu lapa" src="/img/portfolio/borgcamp/borgcamp-textile.jpg" class="figure-bordered figure-padded">
 						<figcaption><a href="http://borgcamp.com/borgcamp-trading/textile-products/">Tekstila izstrādājumi</a></figcaption>
 					</figure>
 					<figure class="xlarge-pull-1 xlarge-push-1">
-						<img alt="Mājaslapa dizains" src="/img/portfolio/borgcamp/borgcamp-mobile.jpg">
+						<img alt="Responsīvs dizains" src="/img/portfolio/borgcamp/borgcamp-mobile.jpg">
 						<figcaption>Mājaslapa uz mobilajām ierīcēm</figcaption>
 					</figure>
 				</div>
