--- a/vestules/_posts/05-08-2015-gribi-sasmidinat-dievu-izstasti-vinam-savus-planus.html
+++ b/vestules/_posts/05-08-2015-gribi-sasmidinat-dievu-izstasti-vinam-savus-planus.html
@@ -33,11 +33,9 @@ cover: august-2015/thumbs-up-god.jpg
 				<h2>Ja tu izdarīsi šo vienu lietu, šī būs laba diena</h2>
 				<p>Plānošanu var aizstāt ar viena prioritāra mērķa nospraušanu dienas sākumā (<a href="http://johnhenrymuller.com/johnhenrymuller">Džona Henrija Millera</a> <a href="http://johnhenrymuller.com/today">metode</a>). Katru rītu (pēc brokastīm, bet pirms darba sākšanas) uzraksti 3 teikumus un saglabā šo failu uz desktopa. Mazāk plānu un vairāk sasniedzamu mērķu.</p>
 				<p>Teksta fails izskatās šādi:</p>
-				{% highlight html %}
-If nothing else, today I am going to ___________.
+				{% highlight html %}If nothing else, today I am going to ___________.
 I am going to do this by ______ then _____ then ______.
-If I do this and only this, today will be a good day.
-				{% endhighlight %}
+If I do this and only this, today will be a good day.{% endhighlight %}
 				<ul class="text-list">
 					<li>Pirmais teikums definē <strong>vienu</strong> svarīgāko mērķi šodienai</li>
 					<li>Otrais teikums sadala šo mērķi uzdevumos</li>
