--- a/vestules/_posts/05-11-2014-14-resursi-programmesanas-pamatu-apguvei.html
+++ b/vestules/_posts/05-11-2014-14-resursi-programmesanas-pamatu-apguvei.html
@@ -78,13 +78,9 @@ description: Vēlies pārbaudītu, cik ļoti Tev nesanāk, cik ātri Tu padodies
 					<i class="icon icon-star"></i><i class="icon icon-star"></i><i class="icon icon-star"></i><i class="icon icon-star-empty"></i><i class="icon icon-star-empty"></i>
 				</div>
 				<p>Lai paveiktu pat pašus elementārākos programmēšanas uzdevumus, Tev nereti nāksies uzrakstīt vairākas JavaScript koda rindiņas. Vēl vairāk JavaScript rindiņas Tev nāksies uzrakstīt, ja vēlēsies, lai programma vienlīdz labi darbojas dažādos interneta pārlūkos. JavaScript funkciju bibliotēta <a href="http://jquery.com/"><strong>jQuery</strong></a>, atvieglo šo uzdevumu, piedāvājot iepriekš definētas JavaScript funkcijas, kas ar mazāk koda rindiņām Tev ļaus izdarīt vairāk. Piemēram, lai atlasītu HTML elementu ar <code>id="footer"</code> Tev būtu jāuzraksta šāds JavaScript kods:</p>
-				{% highlight javascript %}
-				document.getElementById("footer");
-				{% endhighlight %}
+				{% highlight javascript %}document.getElementById("footer");{% endhighlight %}
 				<p>ar jQuery to pašu var izdarīt šādi:
-				{% highlight javascript %}
-				$("#footer");
-				{% endhighlight %}
+				{% highlight javascript %}$("#footer");{% endhighlight %}
 				jQuery pamatu apguvei Tev pietiks ar šo grāmatu. Grāmatas saturs ir viegli uztverams, piedāvātie koda piemēri ir noderīgi. Tās izlasīšanai man bija nepieciešami 4 darbadienu vakari. Slikais: grāmatas saturs vietām ir novecojis, kā arī grāmatas autors pārāk daudz  izmantot jQuery <em>pluginus</em> savos piemēros. Tā vietā, lai iemācītu nolādēt citu veidotas programmas, daudz vērtīgāk būtu bijis piedāvāt lasītājiem tās veidot pašu spēkiem.</p>
 				<h2>Video apmācības</h2>
 				<p>Labākai vielas apguvei vēlams izmantot dažādus resursus un dažādas to formas. Piemēram, es papildus grāmatām izmantoju video apmācības. Zemāk atrodams saraksts ar tām video lekcijām, kuras noskatījos es. Video lekcijas iesaku skatīties pēc augstāk minēto grāmatu izlasīšanas.</p>
