Remove Markdown from txt highlight in mm case study

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -28,7 +28,7 @@ prevPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-10 medium-centered">
 					<figure>
-{% highlight Markdown %}
+{% highlight %}
 Dizains:
 - Teksts kā galvenais dizaina elements
 - Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
