Format yaml collections in projects the right way

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -3,7 +3,9 @@ layout: project
 title: martinsmihailovs<span>.</span>com
 subtitle: Kaligrāfijas iedvesmots haoss
 thumb: martinsmihailovs/martinsmihailovs-thumb.jpg
-tags: [Vizuālā identitāte, Personīgā mājaslapa]
+tags:
+- Vizuālā identitāte
+- Personīgā mājaslapa
 site-head: dark
 prevPost: /portfolio/warehouse-lv
 ---
