--- a/portfolio/_posts/28-02-2016-atlas-logistics.html
+++ b/portfolio/_posts/28-02-2016-atlas-logistics.html
@@ -3,7 +3,9 @@ layout: project
 title: Atlas logistics
 subtitle: Jauns veidols mūsdienīgai loģistikai
 thumb: atlas/atlas-logistics-thumb.jpg
-tags: [Vizuālā identitāte, Korporatīvais dizains]
+tags:
+- Vizuālā identitāte
+- Korporatīvais dizains
 site-head: dark
 prevPost: /portfolio/balticwall
 nextPost: /portfolio/warehouse-lv
