--- a/portfolio/_posts/01-03-2016-balticwall.html
+++ b/portfolio/_posts/01-03-2016-balticwall.html
@@ -4,7 +4,9 @@ brand: BalticWall
 title: Best Baltic brands in
 subtitle: one place
 thumb: balticwall/baltic-wall-thumb.jpg
-tags: [Webserviss, Vizuālā identitāte]
+tags: 
+- Webserviss
+- Vizuālā identitāte
 site-head: dark
 prevPost: /portfolio/borgcamp
 nextPost: /portfolio/atlas-logistics
