--- a/portfolio/_posts/02-03-2016-borgcamp.html
+++ b/portfolio/_posts/02-03-2016-borgcamp.html
@@ -3,7 +3,9 @@ layout: project
 title: Borgcamp Group
 subtitle: Gadsimtiem ilga elegance un spēks
 thumb: borgcamp/borgcamp-thumb.jpg
-tags: [Vizuālā identitāte, Mājaslapa]
+tags:
+- Vizuālā identitāte
+- Mājaslapa
 site-head: light
 nextPost: /portfolio/balticwall
 ---
