--- a/portfolio/_posts/27-02-2016-warehouse-lv.html
+++ b/portfolio/_posts/27-02-2016-warehouse-lv.html
@@ -3,7 +3,9 @@ layout: project
 title: warehouse.lv
 subtitle: Loģistikas dizains un dizaina loģistika
 thumb: warehouse/warehouse-thumb.jpg
-tags: [Mājaslapa, Ikonas]
+tags:
+- Mājaslapa
+- Ikonas
 site-head: dark
 prevPost: /portfolio/atlas-logistics
 nextPost: /portfolio/martinsmihailovs
