Debug Jekyll: Remove highlight section from last case study

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -30,31 +30,7 @@ prevPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-10 medium-centered">
 					<figure>
-{% highlight html %}
-Dizains:
-- Teksts kā galvenais dizaina elements
-- Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
-- Pamata fonta veids: Serif
 
-HTML:
-- Ievērto citātu, domuzīmju, pēdiņu utt. pareizo attēlojumu
-- Imantot SVG visam, kas var būt SVG
-- Jauna HTML satura viegla integrēšana jau esošajā
-
-CSS:
-- Lieto OOCSS ērtai CSS uzturēšanai un paplašināšanai
-- CSS atlasītājus vēlams nesaistīt ar HTML struktūru
-- Lieto vairāk CSS klases un mazāk pēcnācēju atlasītājus
-- Pēc iespējas īsāki atlasītāji
-- Elementu norobežojošās atstarpes (margin) likt tikai vienā virzienā 
-- Mobilais izkārtojums vispirms
-- Neizmantot ID atlasītājus
-- Saturu izkārtojumu abstrahēt CSS režģa sistēmā
-
-JavaScript:
-- Minimāla JavaScript klādbūtne
-
-{% endhighlight %}
 						<figcaption>Definētie projekta nosacījumi</figcaption>
 					</figure>
 				</div>
@@ -73,7 +49,7 @@ JavaScript:
 			<div class="page-width">
 				<div class="medium-11 large-8 medium-centered">
 					<h2>Identitāte</h2>
-					<p>Pie secinājuma, ka mans vārds ir labākais manis identifikators, es nonācu diezgan ātri. Jau 27 gadus tā ir bijusi mana pazīšanās zīme. 27 gadus neapzināti esmu strādājis pie tās atpazīstamības. 27 gadus esmu pildījis to ar asociācijām, ar &ldquo;personīgā zīmola&rdquo; vērtībām. Par logo zīmes pamatu es ņēmu savu parakstu, mazliet to modificējot, lai iegūtu vizuāli balansētāku formu.</p>
+					<p>Pie secinājuma, ka mans vārds ir labākais manis identifikators, es nonācu diezgan ātri. Jau {{ site.owner.age }} gadus tā ir bijusi mana pazīšanās zīme. {{ site.owner.age }} gadus neapzināti esmu strādājis pie tās atpazīstamības. {{ site.owner.age }} gadus esmu pildījis to ar asociācijām, ar &ldquo;personīgā zīmola&rdquo; vērtībām. Par logo zīmes pamatu es ņēmu savu parakstu, mazliet to modificējot, lai iegūtu vizuāli balansētāku formu.</p>
 					<p>Viens no maniem hobijiem ir kaligrāfija. Kaligrāfija ar kaligrāfijas spalvu un tinti. Rezultatā mani pirksti regulāri ir nosmērēti ar tinti, mans darba galds un klaviatūra ir noklāts ar tintes traipiem. Tā ir manis raksturojošā nekārtība. Nekārtība, kas ir <strong>radošā procesa apliecinājums un pārpalikums</strong>. Nolēmu šos tintes pilienus/traipus izmantot identitātes papildināšanai. Mazliet haosa dzīvi padara tikai interesentāku. Krāsas arī izvēlējos kaligrāfijas iedvesmots. Protams, tintes melnais un dzelteni brūnais no manām metāla kaligrāfijas spalvām.</p>
 					<figure>
 						<ul class="project-swatches list-unstyled">
