Debug Jekyll: Remove dashes from highlight section

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -32,27 +32,21 @@ prevPost: /portfolio/warehouse-lv
 					<figure>
 {% highlight html %}
 Dizains
-- Teksts kā galvenais dizaina elements
-- Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
-- Pamata fonta veids: Serif
+Teksts kā galvenais dizaina elements
+Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
+Pamata fonta veids: Serif
 
 HTML
-- Ievērto citātu, domuzīmju, pēdiņu utt. pareizo attēlojumu
-- Imantot SVG visam, kas var būt SVG
-- Jauna HTML satura viegla integrēšana jau esošajā
+Ievērto citātu, domuzīmju, pēdiņu utt. pareizo attēlojumu
+Imantot SVG visam, kas var būt SVG
+Jauna HTML satura viegla integrēšana jau esošajā
 
 CSS
-- Lieto OOCSS ērtai CSS uzturēšanai un paplašināšanai
-- CSS atlasītājus vēlams nesaistīt ar HTML struktūru
-- Lieto vairāk CSS klases un mazāk pēcnācēju atlasītājus
-- Pēc iespējas īsāki atlasītāji
-- Elementu norobežojošās atstarpes (margin) likt tikai vienā virzienā 
-- Mobilais izkārtojums vispirms
-- Neizmantot ID atlasītājus
-- Saturu izkārtojumu abstrahēt CSS režģa sistēmā
+Lieto OOCSS ērtai CSS uzturēšanai un paplašināšanai
+
 
 JavaScript
-- Minimāla JavaScript klādbūtne
+Minimāla JavaScript klādbūtne
 
 {% endhighlight %}
 						<figcaption>Definētie projekta nosacījumi</figcaption>
