--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -30,25 +30,28 @@ prevPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-10 medium-centered">
 					<figure>
-{% highlight html %}
-Dizains
-Teksts kā galvenais dizaina elements
-Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
-Pamata fonta veids: Serif
+{% highlight html %}Dizains:
+- Teksts kā galvenais dizaina elements
+- Drukas dizainu (žurnālu) iedvesmots satura izkārtojums
+- Pamata fonta veids: Serif
 
-HTML
-Ievērto citātu, domuzīmju, pēdiņu utt. pareizo attēlojumu
-Imantot SVG visam, kas var būt SVG
-Jauna HTML satura viegla integrēšana jau esošajā
+HTML:
+- Ievērto citātu, domuzīmju, pēdiņu utt. pareizo attēlojumu
+- Imantot SVG visam, kas var būt SVG
+- Jauna HTML satura viegla integrēšana jau esošajā
 
-CSS
-Lieto OOCSS ērtai CSS uzturēšanai un paplašināšanai
+CSS:
+- Lieto OOCSS ērtai CSS uzturēšanai un paplašināšanai
+- CSS atlasītājus vēlams nesaistīt ar HTML struktūru
+- Lieto vairāk CSS klases un mazāk pēcnācēju atlasītājus
+- Pēc iespējas īsāki atlasītāji
+- Elementu norobežojošās atstarpes (margin) likt tikai vienā virzienā 
+- Mobilais izkārtojums vispirms
+- Neizmantot ID atlasītājus
+- Saturu izkārtojumu abstrahēt CSS režģa sistēmā
 
-
-JavaScript
-Minimāla JavaScript klādbūtne
-
-{% endhighlight %}
+JavaScript:
+- Minimāla JavaScript klādbūtne{% endhighlight %}
 						<figcaption>Definētie projekta nosacījumi</figcaption>
 					</figure>
 				</div>
