Debug Jekyll: Add line breaks

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -30,7 +30,9 @@ prevPost: /portfolio/warehouse-lv
 			<div class="page-width">
 				<div class="medium-11 large-10 medium-centered">
 					<figure>
-{% highlight html %}test{% endhighlight %}
+{% highlight html %}
+test
+{% endhighlight %}
 						<figcaption>Definētie projekta nosacījumi</figcaption>
 					</figure>
 				</div>
