Debug Jekyll: Add more line breaks

--- a/portfolio/_posts/26-02-2016-martinsmihailovs.html
+++ b/portfolio/_posts/26-02-2016-martinsmihailovs.html
@@ -32,6 +32,10 @@ prevPost: /portfolio/warehouse-lv
 					<figure>
 {% highlight html %}
 test
+
+test
+
+test
 {% endhighlight %}
 						<figcaption>Definētie projekta nosacījumi</figcaption>
 					</figure>
