Typo in mlv case study

--- a/portfolio/_posts/25-02-2016-mlv.html
+++ b/portfolio/_posts/25-02-2016-mlv.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 title: m_____.lv
-subtitle: Sludināju portāls zināšanām un prasmēm
+subtitle: Sludinājumu portāls zināšanām un prasmēm
 thumb: mlv/mlv-thumb.jpg
 tags: [Projekts tapšanas stadijā]
 site-head: dark
