Typo in mlv case study

--- a/portfolio/_posts/25-02-2016-mlv.html
+++ b/portfolio/_posts/25-02-2016-mlv.html
@@ -20,7 +20,7 @@ prevPost: /portfolio/martinsmihailovs
 						</ul>
 					</aside>
 					<h3 class="h4">Idejas potenciāla testēšana</h3>
-					<p>Šāda shēma man likās tik vienkārša un vajadzīga, ka es nolēmu pajautāt savām paziņām, vai un ko viņi vēlas iemācīties. Es uztaisīju <a href="http://martinsmihailovs.com/anketa/">Typeform anketu</a> un nosūtīju aicinājumus to aizpildīt. Es saņēmu 53 atbildes, un rezultāti mani nepārsteidza: <strong>respondenti savu vēlmi iemācīties kaut ko jaunu 10 baļļu sitēmā vidēji novērtēja ar 8.47</strong>. Zemāk ir atrodami citi aptaujas rezultāti.</p>
+					<p>Šāda shēma man likās tik vienkārša un vajadzīga, ka es nolēmu pajautāt savām paziņām, vai un ko viņi vēlas iemācīties. Es uztaisīju <a href="http://martinsmihailovs.com/anketa/">Typeform anketu</a> un nosūtīju aicinājumus to aizpildīt. Saņēmu 53 atbildes un rezultāti mani nepārsteidza: <strong>respondenti savu vēlmi iemācīties kaut ko jaunu 10 baļļu sitēmā vidēji novērtēja ar 8.47</strong>. Zemāk ir atrodami citi aptaujas rezultāti.</p>
 					<figure class="xlarge-pull-2 xlarge-push-2">
 						<img src="/img/portfolio/mlv/form-question-1.jpg" alt="">
 					</figure>
