--- a/c/20.html
+++ b/c/20.html
@@ -41,7 +41,7 @@
 	<div class="header"></div>
 	<div class="header-2"></div>
 	<div class="img-container">
-		<a href="4.html"><img src="3.jpg" alt=""></a>
+		<a href="index.html"><img src="20.jpg" alt=""></a>
 	</div>
 	
 </body>
