--- a/c/4.html
+++ b/c/4.html
@@ -10,7 +10,7 @@
 			padding: 0;
 		}
 		body {
-			background: #f7f7f7;
+			background: #f1f1f1;
 		}
 		.img-container {
 			text-align: center;
@@ -24,14 +24,22 @@
 			top: 0;
 			width: 100%;
 			background: #fff;
-			height: 74px;
+			height: 75px;
 			z-index: -10;
-			border-bottom: 1px solid #d7d7d7;
+		}
+		.header-2 {
+			position: absolute;
+			top: 75px;
+			width: 100%;
+			background: #4d96ff;
+			height: 107px;
+			z-index: -10;
 		}
 	</style>
 </head>
 <body>
 	<div class="header"></div>
+	<div class="header-2"></div>
 	<div class="img-container">
 		<a href="5.html"><img src="4.jpg" alt=""></a>
 	</div>
