--- a/c/17.html
+++ b/c/17.html
@@ -41,7 +41,7 @@
 	<div class="header"></div>
 	<div class="header-2"></div>
 	<div class="img-container">
-		<a href="18.html"><img src="17.jpg" alt=""></a>
+		<a href="index.html"><img src="17.jpg" alt=""></a>
 	</div>
 	
 </body>
